[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["breakpoint_counter"]

[project]
name = "breakpoint_counter"
version = "0.0.1"
description = "A tool to count soft-clipped reads in a bam file."
authors = [
  { name = "Khalid Mahmood", email = "khalid.mahmood@unimelb.edu.au" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.2"
dependencies = [
  "pysam", 
]
keywords = ["breakpoints", "bam", "alignment"]

[project.scripts]
breakpoint_counter = "breakpoint_counter.breakpoint_counter:main"

[project.urls]
"Homepage" = "https://github.com/khalidm/breakpoint_counter"
"Bug Tracker" = "https://github.com/khalidm/breakpoint_counter/issues"
// docs = "https://bjpop.github.io/gurita/index.html"
// documentation = "https://bjpop.github.io/gurita/index.html"
